--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "node --test",
-    "docs": "jsdoc -r ./src -d ./docs/jsdocs -R ./docs/jsdocs/README.md",
+    "docs": "jsdoc -r ./src -d ./docs/jsdocs -R ./docs/jsdocs/README.md -c ./docs/jsdocs/jsdoc.json",
     "digest": "node ./src/cli.js",
     "build": "webpack  --stats-error-details"
   },
@@ -53,15 +53,13 @@
   "homepage": "https://github.com/miltonbolonha/digest-it#readme",
   "devDependencies": {
     "jsdocs": "^1.0.0",
+    "tidy-jsdoc": "^1.4.1",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "app-root-path": "^3.1.0",
     "assert": "^2.1.0",
-    "node-polyfill-webpack-plugin": "^4.0.0",
-    "path": "^0.12.7",
-    "path-browserify": "^1.0.1",
-    "yargs": "^17.7.2"
+    "path": "^0.12.7"
   }
 }
